--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -10,7 +10,7 @@
   margin: 30px;
 }
 
-.btn-main {
+.btn {
   text-align: center;
   width: 100%;
   font-size: 1.5rem;
@@ -18,20 +18,19 @@
   border: none;
   color: white;
 }
-.carousel-inner {
-  height: 70vh;
-}
 
-.text-center {
+.text-center p {
   text-align: center;
+  font-size: 1.5rem;
 }
 
 .text-center h2 {
   margin: 10px;
   font-size: 2rem;
+  color: #335b525b;
 }
 
-.container-bottom {
+.bpage {
   background: rgb(255, 255, 255);
   background: linear-gradient(
     90deg,
@@ -40,53 +39,47 @@
   );
 }
 
-.container-video {
-  margin: 30px;
-  padding: 5px;
-}
-
 .container-form {
-  margin: 30px;
-  padding: 5px;
+  width: 30%;
 }
 
-.form-select {
-  width: 50%;
-  margin-top: 15px;
-}
-
-.form-check {
-  width: 50%;
-  margin-top: 15px;
-}
-
-.btn-form {
-  width: 100%;
-  background-color: #335b525b;
-  padding: 5px;
-  margin: 10px;
-  border: 2px;
-  border-radius: 5px;
+.legend-form {
   text-align: center;
+  color: #335b525b;
 }
 
-.container-footer {
+.footer {
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
   justify-content: space-between;
   align-items: center;
 }
 
-.container-footer a {
+.footer a {
   list-style-type: none;
   text-decoration: none;
 }
 
-.container-footer h2 {
+.footer h2 {
   font-size: 1rem;
 }
 
-.logo-img {
+.logo-rrss {
   width: 40px;
   height: 40px;
+}
+
+.carousel-inner img {
+  width: 100%;
+  max-height: 760px;
+}
+
+.carousel-caption h5 {
+  color: rgba(0, 0, 0, 0.712);
+  font-size: 2.5rem;
+}
+
+.carousel-caption p {
+  color: rgba(0, 0, 0, 0.712);
+  font-size: 1.5rem;
 }
