--- a/stylesheet/cirugias.css
+++ b/stylesheet/cirugias.css
@@ -1,47 +1,18 @@
-.body--container {
-  display: grid;
-  grid-template-areas:
-    "header header header"
-    "main main main"
-    "banner banner banner"
-    "footer footer footer";
-  grid-template-rows: 1fr, 0.5fr, 0.5fr, 1fr;
-  grid-template-columns: 1fr 1fr 1fr;
+.text-center li {
+  list-style: none;
+  font-size: 1rem;
+  text-align: left;
+}
+
+.text-center h2 {
+  font-size: 1.3rem;
+  color: #335b525b;
+  text-align: left;
   background: linear-gradient(
     45deg,
-    rgba(222, 184, 135, 0.24) 0%,
+    rgba(222, 184, 135, 0.212) 0%,
     rgba(255, 255, 255, 0.46262254901960786) 100%
   );
-}
-
-.main--container {
-  grid-area: main;
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-evenly;
-  align-items: baseline;
-  margin: 30px;
-  height: 50vh;
-}
-
-.main--container h2 {
-  color: #335b52;
-  font-size: 1.5rem;
-  margin: 10px;
-  text-align: center;
-  background: rgba(222, 184, 135, 0.774);
-  background: linear-gradient(
-    61deg,
-    rgba(222, 184, 135, 0.3477766106442577) 36%,
-    rgba(255, 255, 255, 0) 77%
-  );
-}
-
-.main--container li {
-  font-size: 1.5rem;
-  margin: 10px;
-  text-align: center;
-  background-color: #4881741a;
 }
 
 .banner {
