--- a/stylesheet/especialidades.css
+++ b/stylesheet/especialidades.css
@@ -1,61 +1,58 @@
-.body--container {
-  display: grid;
-  grid-template-areas:
-    "header header header"
-    "main main main"
-    "footer footer footer";
-  grid-template-rows: 1fr auto 1fr;
-  grid-template-columns: 1fr;
+.container-fluid {
   background: linear-gradient(
-    45deg,
-    rgba(222, 184, 135, 0.24) 0%,
-    rgba(255, 255, 255, 0.46262254901960786) 100%
+    90deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(51, 91, 82, 0.13209033613445376) 100%
   );
-}
-
-.main--container {
-  grid-area: main;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.main--container table {
-  margin: 30px;
-}
-
-.main--container h2 {
+.especialidad h2 {
   color: #335b52;
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(21, 26, 25, 0.281) 100%
+  );
   font-size: 2rem;
   text-align: center;
-  background: rgb(222, 184, 135);
-  background: linear-gradient(
-    61deg,
-    rgba(222, 184, 135, 0.3477766106442577) 36%,
-    rgba(255, 255, 255, 0) 77%
-  );
-  margin: 30px;
+  margin-top: 10px;
 }
 
-.main--container th {
+.especialidad h3 {
   font-size: 1.5rem;
   font-weight: bolder;
-  justify-content: center;
   text-align: center;
 }
 
-.main--container td {
-  font-size: 1.5rem;
+.especialidad h4 {
+  font-size: 1rem;
   font-weight: bolder;
-  justify-content: center;
+  text-align: center;
+  margin: 10px;
+}
+
+.especialidad h5 {
+  margin: 10px;
+  font-size: 1rem;
+  font-weight: bolder;
   text-align: center;
 }
 
-.main--container td img {
+.especialidad img {
   width: 150px;
-  justify-content: center;
-  text-align: center;
+  margin: 10px;
 }
 
-.main--container img:hover {
+.container-fluid img:hover {
   transform: scale(2);
+}
+
+.especialidad h5 a {
+  text-decoration: none;
+  color: #335b52be;
+  margin: 10px;
 }
