--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -1,15 +1,3 @@
-.logo-brand {
-  margin: 20px;
-  width: 220px;
-  height: 60px;
-}
-
-.nav-item {
-  text-align: center;
-  font-size: 1.8rem;
-  margin: 30px;
-}
-
 .btn {
   text-align: center;
   width: 100%;
@@ -17,17 +5,6 @@
   background-color: #335b525b;
   border: none;
   color: white;
-}
-
-.text-center p {
-  text-align: center;
-  font-size: 1.5rem;
-}
-
-.text-center h2 {
-  margin: 10px;
-  font-size: 2rem;
-  color: #335b525b;
 }
 
 .bpage {
@@ -48,38 +25,39 @@
   color: #335b525b;
 }
 
-.footer {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.footer a {
-  list-style-type: none;
-  text-decoration: none;
-}
-
-.footer h2 {
+.text-center p {
+  text-align: center;
   font-size: 1rem;
 }
 
-.logo-rrss {
-  width: 40px;
-  height: 40px;
-}
-
-.carousel-inner img {
-  width: 100%;
-  max-height: 800px;
-}
-
-.carousel-caption h5 {
-  color: rgba(0, 0, 0, 0.712);
-  font-size: 2.5rem;
-}
-
-.carousel-caption p {
-  color: rgba(0, 0, 0, 0.712);
+.text-center h2 {
+  margin: 10px;
   font-size: 1.5rem;
+  color: #335b525b;
+  text-align: center;
+}
+
+.bgimage {
+  margin-top: 5px;
+  display: flex;
+  align-items: flex-start;
+  width: 100%;
+  height: 600px;
+  background-image: url("../img/oftalmologo.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.bgimage h5 {
+  color: #335b525b;
+  font-size: 2.5rem;
+  text-align: left;
+  margin: 10px;
+}
+
+.bgimage p {
+  color: rgba(0, 0, 0, 0.541);
+  font-size: 1.5rem;
+  text-align: left;
+  margin: 10px;
 }
