--- a/stylesheet/estudios.css
+++ b/stylesheet/estudios.css
@@ -1,16 +1,5 @@
-.body--container {
-  display: grid;
-  grid-template-areas:
-    "header header"
-    "main main"
-    "footer footer";
-  grid-template-rows: 1fr auto 1fr;
-  grid-template-columns: 1fr 3fr;
-}
-
-.main--container {
-  grid-area: main;
-  background-image: url("../img/oftalmologo.jpg");
+.main {
+  background-image: url("../img/slide4.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -18,9 +7,10 @@
   height: 100vh;
 }
 
-.main--container h2 {
-  font-size: 2rem;
-  color: #335b52;
-  margin: 70px;
-  text-align: left;
+.main h2 {
+  font-size: 1.5rem;
+  margin-top: 25px;
+  color: rgba(0, 0, 0, 0.555);
+  text-align: right;
+  padding: 20px;
 }
