--- a/stylesheet/cirugias.css
+++ b/stylesheet/cirugias.css
@@ -1,3 +1,15 @@
+.main {
+  width: 100%;
+  height: auto;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding: 0px;
+}
+
+.sectionPpal {
+  margin: 0px;
+}
+
 .text-center li {
   list-style: none;
   font-size: 1rem;
@@ -13,13 +25,16 @@
     rgba(222, 184, 135, 0.212) 0%,
     rgba(255, 255, 255, 0.46262254901960786) 100%
   );
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .banner {
-  grid-area: banner;
   height: 50vh;
   background-image: url("../img/cirujanos.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
