--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -2,27 +2,45 @@
   text-align: center;
   width: 100%;
   font-size: 1.5rem;
-  background-color: #335b525b;
+  /*background-color: #335b525b;*/
+  /*background-color: #99bbad;*/
+  background-color: #c6a9a38e;
   border: none;
   color: white;
 }
 
+.container-fluid {
+  padding: 0px;
+}
+
+.ppage {
+  margin: 0px;
+}
+
 .bpage {
-  background: rgb(255, 255, 255);
+  /*background: rgb(255, 255, 255);
   background: linear-gradient(
     90deg,
     rgba(255, 255, 255, 1) 0%,
     rgba(51, 91, 82, 0.13209033613445376) 100%
+  );*/
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(235, 216, 183, 0.17970938375350143) 27%
   );
+  margin: 0px;
 }
 
 .container-form {
-  width: 30%;
+  width: 50%;
 }
 
 .legend-form {
   text-align: center;
-  color: #335b525b;
+  /*color: #335b525b;*/
+  color: black;
 }
 
 .text-center p {
@@ -33,14 +51,14 @@
 .text-center h2 {
   margin: 10px;
   font-size: 1.5rem;
-  color: #335b525b;
+  color: #99bbad;
   text-align: center;
 }
 
 .bgimage {
   margin-top: 5px;
   display: flex;
-  align-items: flex-start;
+  align-items: flex-end;
   width: 100%;
   height: 600px;
   background-image: url("../img/oftalmologo.jpg");
@@ -49,8 +67,9 @@
   background-size: cover;
 }
 .bgimage h5 {
-  color: #335b525b;
-  font-size: 2.5rem;
+  /*color: #335b525b;*/
+  color: #c6a9a3;
+  font-size: 2.2rem;
   text-align: left;
   margin: 10px;
 }
