--- a/stylesheet/generalstyle.css
+++ b/stylesheet/generalstyle.css
@@ -30,13 +30,15 @@
 }
 
 .footer {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
-  align-items: center;
   background-color: #335b522d;
   max-height: auto;
   margin-top: 5px;
+}
+
+.footerRow {
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .footer-brand {
