--- a/stylesheet/especialidades.css
+++ b/stylesheet/especialidades.css
@@ -9,29 +9,25 @@
   padding: 0px;
 }
 
-.row {
+.section1 {
   margin: 0px;
 }
 
-.row h2 {
-  color: #335b52;
+.section1 h2 {
+  color: #335b52a4;
   font-size: 2rem;
   text-align: center;
-  margin-top: 15px;
-  background: linear-gradient(
-    45deg,
-    rgba(222, 184, 135, 0.212) 0%,
-    rgba(255, 255, 255, 0.46262254901960786) 100%
-  );
+  background-color: #c6a9a38e;
 }
 
 .especialidad {
-  display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
   margin-top: 20px;
   margin-bottom: 20px;
+  padding: 0px;
 }
 
 .especialidad h3 {
