--- a/stylesheet/estudios.css
+++ b/stylesheet/estudios.css
@@ -1,18 +1,23 @@
 .main {
-  background-image: url("../img/slide4.jpg");
+  padding: 0px;
+  margin: 0px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  height: 100vh;
+  background-image: url("../img/slide1.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  width: 100%;
-  height: 100vh;
-  margin-top: 5px;
-  margin-bottom: 5px;
 }
 
-.main h2 {
+.mainTxt {
+  display: flex;
+  flex-direction: row;
+}
+
+.mainTxt h2 {
   font-size: 1.5rem;
   margin-top: 25px;
-  color: rgba(0, 0, 0, 0.555);
-  text-align: right;
-  padding: 20px;
+  color: #335b52a4;
+  text-align-last: right;
 }
