--- a/stylesheet/generalstyle.css
+++ b/stylesheet/generalstyle.css
@@ -38,7 +38,7 @@
 
 .footerRow {
   flex-flow: row wrap;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
