--- a/stylesheet/portal.css
+++ b/stylesheet/portal.css
@@ -1,25 +1,13 @@
-.body--container {
-  display: grid;
-  grid-template-areas:
-    "header header header"
-    "main main main"
-    "footer footer footer";
-  grid-template-rows: 1fr, auto, 1fr;
-  grid-template-columns: 1fr, 1fr, 1fr;
-}
-
-.main--container {
-  grid-area: main;
+.main {
   background-image: url("../img/img_3.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   height: 100vh;
   width: 100%;
-  overflow: hidden;
 }
 
-.main--container form {
+.main form {
   position: absolute;
   width: 20%;
   top: 200px;
@@ -52,8 +40,8 @@
 }
 
 .form__button button {
-  background-color: #335b525b;
-  color: #dbdee1;
+  background-color: #c6a9a3bd;
+  color: #488174;
   font-size: 15px;
   text-decoration: none;
   font-weight: bolder;
