--- a/stylesheet/generalstyle.css
+++ b/stylesheet/generalstyle.css
@@ -8,10 +8,6 @@
   background-color: #335b522d;
 }
 
-.navbar-toggler {
-  background-color: #c6a9a38e;
-}
-
 .navbar-brand {
   margin: 0px;
   width: 30%;
@@ -34,12 +30,14 @@
   background-color: #335b522d;
   max-height: auto;
   margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .footerRow {
   flex-flow: row wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
+  margin: 0px;
 }
 
 .footer-brand {
@@ -61,6 +59,8 @@
   margin-top: 5px;
   margin-bottom: 5px;
   width: auto;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .footer a {
