--- a/stylesheet/cirugias.css
+++ b/stylesheet/cirugias.css
@@ -20,17 +20,18 @@
   font-size: 1.3rem;
   color: #335b525b;
   text-align: left;
+  background: rgb(255, 255, 255);
   background: linear-gradient(
-    45deg,
-    rgba(222, 184, 135, 0.212) 0%,
-    rgba(255, 255, 255, 0.46262254901960786) 100%
+    90deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(198, 169, 163, 0.5018382352941176) 89%
   );
   margin-top: 10px;
   margin-bottom: 10px;
 }
 
 .banner {
-  height: 50vh;
+  height: 60vh;
   background-image: url("../img/cirujanos.jpg");
   background-size: cover;
   background-repeat: no-repeat;
