--- a/stylesheet/especialidades.css
+++ b/stylesheet/especialidades.css
@@ -17,7 +17,12 @@
   color: #335b52a4;
   font-size: 2rem;
   text-align: center;
-  background-color: #c6a9a38e;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(198, 169, 163, 0.5018382352941176) 89%
+  );
 }
 
 .especialidad {
