--- a/stylesheet/estudios.css
+++ b/stylesheet/estudios.css
@@ -1,8 +1,13 @@
 .main {
-  padding: 0px;
-  margin: 0px;
+  width: 100%;
+  height: auto;
   margin-top: 5px;
   margin-bottom: 5px;
+  padding: 0px;
+}
+
+.sectionPpal {
+  margin: 0px;
 }
 
 .text-center li {
@@ -15,17 +20,18 @@
   font-size: 1.3rem;
   color: #335b525b;
   text-align: left;
+  background: rgb(255, 255, 255);
   background: linear-gradient(
-    45deg,
-    rgba(222, 184, 135, 0.212) 0%,
-    rgba(255, 255, 255, 0.46262254901960786) 100%
+    90deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(198, 169, 163, 0.5018382352941176) 89%
   );
   margin-top: 10px;
   margin-bottom: 10px;
 }
 
 .banner {
-  height: 30vh;
+  height: 50vh;
   background-image: url("../img/slide1.jpg");
   background-size: cover;
   background-repeat: no-repeat;
