--- a/stylesheet/nuestrocentro.css
+++ b/stylesheet/nuestrocentro.css
@@ -16,6 +16,10 @@
   text-align: left;
 }
 
+.carousel-inner {
+  height: 80vh;
+}
+
 .carousel-caption {
   top: 0;
   bottom: auto;
@@ -28,14 +32,15 @@
   background: linear-gradient(
     90deg,
     rgba(255, 255, 255, 1) 0%,
-    rgba(235, 216, 183, 0.17970938375350143) 27%
+    rgba(198, 169, 163, 0.5018382352941176) 89%
   );
 }
 
 .section1 h4 {
-  font-size: 1.5rem;
-  text-align: center;
-  margin-top: 50px;
+  font-size: 1.2rem;
+  font-weight: lighter;
+  text-align: left;
+  margin-top: 30px;
   margin-bottom: 50px;
 }
 
