--- a/stylesheet/portal.css
+++ b/stylesheet/portal.css
@@ -2,26 +2,27 @@
   background-image: url("../img/img_3.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: bottom;
   height: 100vh;
-  width: 100%;
   margin-top: 10px;
 }
 
-.row {
+.section1 {
   display: flex;
-  flex-direction: column;
-  align-content: flex-end;
-  margin: 10px;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin-top: 50px;
 }
 
-.form-container {
+.form--container {
+  background: rgb(255, 255, 255);
   background: linear-gradient(
     90deg,
     rgba(255, 255, 255, 1) 0%,
-    rgba(235, 216, 183, 0.17970938375350143) 27%
+    rgba(198, 169, 163, 0.5018382352941176) 89%
   );
   padding: 10px;
+  width: 30%;
 }
 
 .formulario button {
