--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -2,8 +2,6 @@
   text-align: center;
   width: 100%;
   font-size: 1.5rem;
-  /*background-color: #335b525b;*/
-  /*background-color: #99bbad;*/
   background-color: #c6a9a38e;
   border: none;
   color: white;
@@ -15,15 +13,10 @@
 
 .ppage {
   margin: 0px;
+  align-items: space-evenly;
 }
 
 .bpage {
-  /*background: rgb(255, 255, 255);
-  background: linear-gradient(
-    90deg,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(51, 91, 82, 0.13209033613445376) 100%
-  );*/
   background: rgb(255, 255, 255);
   background: linear-gradient(
     90deg,
@@ -39,18 +32,17 @@
 
 .legend-form {
   text-align: center;
-  /*color: #335b525b;*/
   color: black;
 }
 
 .text-center p {
-  text-align: center;
   font-size: 1rem;
+  text-align: center;
 }
 
 .text-center h2 {
-  margin: 10px;
   font-size: 1.5rem;
+  margin-bottom: 20px;
   color: #99bbad;
   text-align: center;
 }
@@ -67,7 +59,6 @@
   background-size: cover;
 }
 .bgimage h5 {
-  /*color: #335b525b;*/
   color: #c6a9a3;
   font-size: 2.2rem;
   text-align: left;
