--- a/styles/pages/main.scss
+++ b/styles/pages/main.scss
@@ -3,3 +3,8 @@
 @import "styles/pages/header";
 @import "styles/pages/footer";
 @import "styles/pages/index";
+@import "styles/pages/nuestrocentro";
+@import "styles/pages/especialidades";
+@import "styles/pages/estudios";
+@import "styles/pages/cirugias";
+@import "styles/pages/portal";
