--- a/styles/pages/main.css
+++ b/styles/pages/main.css
@@ -53,7 +53,7 @@
 .bgimage {
   display: flex;
   align-items: flex-end;
-  background-image: url("/img/oftalmologo.jpg");
+  background-image: url("./img/oftalmologo.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
