--- a/styles/pages/_index.scss
+++ b/styles/pages/_index.scss
@@ -1,7 +1,7 @@
 .bgimage {
   display: flex;
   align-items: flex-end;
-  background-image: url("./img/oftalmologo.jpg");
+  background-image: url("/img/oftalmologo.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
