solucionando problema con subida a github

--- a/styles/pages/_footer.scss
+++ b/styles/pages/_footer.scss
@@ -1,6 +1,9 @@
 .footer {
   background-color: $bc-footer;
   margin-top: 5px;
+  margin-left: 0px;
+  margin-right: 0px;
+  padding: 0px;
 
   .footerRow {
     flex-flow: row wrap;
