--- a/styles/pages/_header.scss
+++ b/styles/pages/_header.scss
@@ -1,5 +1,8 @@
 .navbar {
   background-color: $bc-header;
+  margin-left: 0px;
+  margin-right: 0px;
+  padding: 0px;
 
   .navbar-brand {
     margin: 0px;
