--- a/styles/pages/_index.scss
+++ b/styles/pages/_index.scss
@@ -1,3 +1,7 @@
+.main {
+  padding: 0px;
+}
+
 .bgimage {
   display: flex;
   align-items: flex-end;
@@ -14,6 +18,7 @@
     font-size: $title-size;
     text-align: left;
     margin: 10px;
+    padding: 0px;
   }
 
   p {
@@ -37,14 +42,18 @@
   align-items: space-evenly;
   text-align: center;
 
-  h2 {
-    font-size: $title-size;
-    color: $color-green;
-    margin-bottom: 20px;
-  }
+  &--item {
+    padding: 0px;
 
-  p {
-    font-size: $txt-size-m;
+    h2 {
+      font-size: $title-size;
+      color: $color-green;
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: $txt-size-m;
+    }
   }
 }
 
