--- a/styles/pages/main.css
+++ b/styles/pages/main.css
@@ -1,9 +1,12 @@
 * {
-  margin: 0;
-  padding: 0; }
+  margin: 0px;
+  padding: 0px; }
 
 .navbar {
-  background-color: #335b522d; }
+  background-color: #335b522d;
+  margin-left: 0px;
+  margin-right: 0px;
+  padding: 0px; }
   .navbar .navbar-brand {
     margin: 0px;
     width: 30%; }
@@ -18,7 +21,10 @@
 
 .footer {
   background-color: #335b522d;
-  margin-top: 5px; }
+  margin-top: 5px;
+  margin-left: 0px;
+  margin-right: 0px;
+  padding: 0px; }
   .footer .footerRow {
     flex-flow: row wrap;
     justify-content: space-between;
@@ -50,6 +56,9 @@
           width: 40px;
           height: 40px; }
 
+.main {
+  padding: 0px; }
+
 .bgimage {
   display: flex;
   align-items: flex-end;
@@ -64,7 +73,8 @@
     color: #c6a9a3;
     font-size: 2.2rem;
     text-align: left;
-    margin: 10px; }
+    margin: 10px;
+    padding: 0px; }
   .bgimage p {
     color: rgba(0, 0, 0, 0.541);
     font-size: 1.5rem;
@@ -82,12 +92,14 @@
 .ppage {
   align-items: space-evenly;
   text-align: center; }
-  .ppage h2 {
-    font-size: 2.2rem;
-    color: #99bbad;
-    margin-bottom: 20px; }
-  .ppage p {
-    font-size: 1.5rem; }
+  .ppage--item {
+    padding: 0px; }
+    .ppage--item h2 {
+      font-size: 2.2rem;
+      color: #99bbad;
+      margin-bottom: 20px; }
+    .ppage--item p {
+      font-size: 1.5rem; }
 
 .bpage {
   background: linear-gradient(90deg, white 0%, rgba(235, 216, 183, 0.179709) 27%); }
