--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -4,7 +4,9 @@ $bc-footer: #335b522d;
 $title-color: #99bbad;
 $color-cake: #c6a9a3;
 $color-green: #99bbad;
-$color-txt-default: rgba(0, 0, 0, 0.541) !default;
+$color-boldgreen: #488174c4;
+$color-white: white;
+$color-txt-default: rgba(77, 52, 52, 0.541) !default;
 $bc-btn-green: #488174af;
 $bc-btn-cake: #c6a9a38e;
 $txt-btn-color: white;
@@ -12,7 +14,7 @@ $txt-btn-color: white;
 //sizes
 $title-size: 2.2rem;
 $subtitle-size: 2rem;
-$nav-item-size: 1.8rem;
+$nav-item-size: 1.5rem;
 $txt-btn-size-l: 1.8rem;
 $txt-btn-size-s: 1rem;
 $txt-size-m: 1.5rem;
@@ -20,3 +22,9 @@ $txt-size-s: 1rem;
 
 //backgrounds
 $bc-cream: linear-gradient(90deg, white 0%, rgba(235, 216, 183, 0.179709) 27%);
+$bc-green: linear-gradient(
+  90deg,
+  rgba(255, 255, 255, 1) 0%,
+  rgba(51, 91, 82, 0.13209033613445376) 100%
+);
+$bc-pink: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, #c6a9a3ab);
