--- a/styles/pages/main.css
+++ b/styles/pages/main.css
@@ -16,7 +16,7 @@
       height: 60px; }
   .navbar .nav-item {
     text-align: center;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     margin: 5px; }
 
 .footer {
@@ -56,10 +56,10 @@
           width: 40px;
           height: 40px; }
 
-.main {
+.mainIndex {
   padding: 0px; }
 
-.bgimage {
+.bgimageIndex {
   display: flex;
   align-items: flex-end;
   background-image: url("/img/oftalmologo.jpg");
@@ -69,14 +69,14 @@
   margin-top: 5px;
   width: 100%;
   height: 600px; }
-  .bgimage h5 {
+  .bgimageIndex h5 {
     color: #c6a9a3;
     font-size: 2.2rem;
     text-align: left;
     margin: 10px;
     padding: 0px; }
-  .bgimage p {
-    color: rgba(0, 0, 0, 0.541);
+  .bgimageIndex p {
+    color: rgba(77, 52, 52, 0.541);
     font-size: 1.5rem;
     text-align: left;
     margin: 10px; }
@@ -101,10 +101,143 @@
     .ppage--item p {
       font-size: 1.5rem; }
 
-.bpage {
+.bpageIndex {
   background: linear-gradient(90deg, white 0%, rgba(235, 216, 183, 0.179709) 27%); }
-  .bpage .container-form {
+  .bpageIndex .container-form {
     width: 50%; }
-    .bpage .container-form .legend-form {
+    .bpageIndex .container-form .legend-form {
       text-align: center;
-      color: rgba(0, 0, 0, 0.541); }
+      color: rgba(77, 52, 52, 0.541); }
+
+.mainCentro {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  background: linear-gradient(90deg, white 0%, rgba(235, 216, 183, 0.179709) 27%); }
+  .mainCentro h4 {
+    font-size: 1rem;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 15px;
+    font-weight: lighter;
+    text-align: center; }
+
+.mainEspecialidad {
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  background: linear-gradient(90deg, white 0%, rgba(235, 216, 183, 0.179709) 27%); }
+  .mainEspecialidad .section1 h2 {
+    background: linear-gradient(90deg, white 0%, rgba(51, 91, 82, 0.13209) 100%);
+    color: #488174c4;
+    font-size: 2rem;
+    text-align: center; }
+  .mainEspecialidad .section1 h3 {
+    font-size: 1rem;
+    font-weight: bolder;
+    text-align: center; }
+  .mainEspecialidad .section1 h4 {
+    font-size: 1rem;
+    font-weight: bolder;
+    text-align: center;
+    margin: 10px; }
+  .mainEspecialidad .section1 h5 {
+    margin: 10px;
+    font-size: 1rem;
+    font-weight: bolder;
+    text-align: center; }
+    .mainEspecialidad .section1 h5 a {
+      text-decoration: none;
+      color: #c6a9a3;
+      margin: 10px; }
+  .mainEspecialidad .section1 img {
+    width: 150px;
+    margin: 10px; }
+  .mainEspecialidad .section1 img:hover {
+    transform: scale(2); }
+
+.mainEstudio {
+  width: 100%;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  background: linear-gradient(90deg, white 0%, rgba(235, 216, 183, 0.179709) 27%); }
+  .mainEstudio h2 {
+    background: linear-gradient(90deg, white 0%, rgba(51, 91, 82, 0.13209) 100%);
+    color: #488174c4;
+    font-size: 2rem;
+    text-align: left;
+    margin-top: 10px;
+    margin-bottom: 10px; }
+  .mainEstudio--lista {
+    list-style: none;
+    font-size: 1rem;
+    text-align: left; }
+
+.bannerEstudio {
+  height: 50vh;
+  background-image: url("/img/slide1.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-top: 5px;
+  margin-bottom: 5px; }
+
+.mainCirugia {
+  width: 100%;
+  height: auto;
+  margin-top: 5px;
+  margin-bottom: 5px; }
+  .mainCirugia .section1Cirugia--cirugia h2 {
+    background: linear-gradient(90deg, white 0%, rgba(51, 91, 82, 0.13209) 100%);
+    color: #488174c4;
+    font-size: 1.5rem;
+    text-align: center; }
+  .mainCirugia .section1Cirugia--cirugia li {
+    list-style: none;
+    text-align: left;
+    font-size: 1rem; }
+
+.bannerCirugia {
+  height: 60vh;
+  background-image: url("/img/cirujanos.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-top: 5px;
+  margin-bottom: 5px; }
+
+.mainPortal {
+  background-image: url("/img/img_3.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  height: 100vh;
+  margin-top: 5px;
+  margin-bottom: 5px; }
+  .mainPortal .section1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-top: 50px; }
+    .mainPortal .section1 .form--container {
+      margin: 20px;
+      padding: 10px;
+      border: 2px;
+      border-radius: 5px;
+      background: linear-gradient(90deg, white 0%, rgba(51, 91, 82, 0.13209) 100%); }
+      .mainPortal .section1 .form--container .formulario .btn-primary {
+        color: white;
+        background-color: #488174af;
+        font-size: 1rem;
+        text-decoration: none;
+        cursor: pointer;
+        width: auto;
+        border: 2px;
+        border-radius: 5px; }
+      .mainPortal .section1 .form--container .formulario .forgetPass {
+        margin: 10px; }
+        .mainPortal .section1 .form--container .formulario .forgetPass h3 {
+          font-size: 1rem;
+          text-decoration: none; }
