--- a/styles/pages/main.css
+++ b/styles/pages/main.css
@@ -62,7 +62,7 @@
 .bgimageIndex {
   display: flex;
   align-items: flex-end;
-  background-image: url("/img/oftalmologo.jpg");
+  background-image: url("/img/oftalmologo2.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
