--- a/styles/pages/_cirugias.scss
+++ b/styles/pages/_cirugias.scss
@@ -23,7 +23,7 @@
 
 .bannerCirugia {
   height: 60vh;
-  background-image: url("imgPages/cirujanos.jpg");
+  background-image: url("/img/quirofano.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
