--- a/styles/pages/_estudios.scss
+++ b/styles/pages/_estudios.scss
@@ -22,7 +22,7 @@
 
 .bannerEstudio {
   height: 50vh;
-  background-image: url("/imgPages/slide1.jpg");
+  background-image: url("/img/slide1.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
