probando cambio de directorio de imagenes en codigo scss

--- a/styles/pages/_index.scss
+++ b/styles/pages/_index.scss
@@ -5,7 +5,7 @@
 .bgimageIndex {
   display: flex;
   align-items: flex-end;
-  background-image: url("/img/oftalmologo2.jpg");
+  background-image: url("./img/oftalmologo2.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
