--- a/styles/pages/_especialidades.scss
+++ b/styles/pages/_especialidades.scss
@@ -3,8 +3,8 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin-top: $margin-size-small;
+  margin-bottom: $margin-size-small;
   background: $bc-cream;
 
   .section1 {
@@ -25,11 +25,11 @@
       font-size: $txt-size-s;
       font-weight: bolder;
       text-align: center;
-      margin: 10px;
+      margin: $margin-size-normal;
     }
 
     h5 {
-      margin: 10px;
+      margin: $margin-size-normal;
       font-size: $txt-size-s;
       font-weight: bolder;
       text-align: center;
@@ -37,13 +37,13 @@
       a {
         text-decoration: none;
         color: $color-cake;
-        margin: 10px;
+        margin: $margin-size-normal;
       }
     }
 
     img {
       width: 150px;
-      margin: 10px;
+      margin: $margin-size-normal;
     }
 
     img:hover {
