--- a/styles/pages/_estudios.scss
+++ b/styles/pages/_estudios.scss
@@ -1,7 +1,7 @@
 .mainEstudio {
   width: 100%;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin-top: $margin-size-small;
+  margin-bottom: $margin-size-small;
   background: $bc-cream;
 
   h2 {
@@ -9,23 +9,23 @@
     color: $color-boldgreen;
     font-size: $subtitle-size;
     text-align: left;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: $margin-size-normal;
+    margin-bottom: $margin-size-normal;
   }
 
   &--lista {
     list-style: none;
-    font-size: 1rem;
+    font-size: $txt-size-s;
     text-align: left;
   }
 }
 
 .bannerEstudio {
   height: 50vh;
-  background-image: url("/img/slide1.jpg");
+  background-image: url("../../img/slide1.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin-top: $margin-size-small;
+  margin-bottom: $margin-size-small;
 }
