--- a/styles/pages/_index.scss
+++ b/styles/pages/_index.scss
@@ -5,11 +5,11 @@
 .bgimageIndex {
   display: flex;
   align-items: flex-end;
-  background-image: url("../img/oftalmologo2.jpg");
+  background-image: url("../../img/oftalmologo2.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  margin-top: 5px;
+  margin-top: $margin-size-small;
   width: 100%;
   height: 600px;
 
@@ -17,7 +17,7 @@
     color: $color-cake;
     font-size: $title-size;
     text-align: left;
-    margin: 10px;
+    margin: $margin-size-normal;
     padding: 0px;
   }
 
@@ -25,7 +25,7 @@
     color: $color-txt-default;
     font-size: $txt-size-m;
     text-align: left;
-    margin: 10px;
+    margin: $margin-size-normal;
   }
 }
 
@@ -48,7 +48,7 @@
     h2 {
       font-size: $title-size;
       color: $color-green;
-      margin-bottom: 20px;
+      margin-bottom: $margin-size-big;
     }
 
     p {
