--- a/styles/pages/main.css
+++ b/styles/pages/main.css
@@ -3,10 +3,7 @@
   padding: 0px; }
 
 .navbar {
-  background-color: #335b522d;
-  margin-left: 0px;
-  margin-right: 0px;
-  padding: 0px; }
+  background-color: #335b522d; }
   .navbar .navbar-brand {
     margin: 0px;
     width: 30%; }
@@ -17,14 +14,11 @@
   .navbar .nav-item {
     text-align: center;
     font-size: 1.5rem;
-    margin: 5px; }
+    margin: 20px; }
 
 .footer {
   background-color: #335b522d;
-  margin-top: 5px;
-  margin-left: 0px;
-  margin-right: 0px;
-  padding: 0px; }
+  margin-top: 5px; }
   .footer .footerRow {
     flex-flow: row wrap;
     justify-content: space-between;
@@ -62,7 +56,7 @@
 .bgimageIndex {
   display: flex;
   align-items: flex-end;
-  background-image: url("../img/oftalmologo2.jpg");
+  background-image: url("../../img/oftalmologo2.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -71,7 +65,7 @@
   height: 600px; }
   .bgimageIndex h5 {
     color: #c6a9a3;
-    font-size: 2.2rem;
+    font-size: 2.5rem;
     text-align: left;
     margin: 10px;
     padding: 0px; }
@@ -85,7 +79,7 @@
   border: none;
   text-align: center;
   width: 100%;
-  font-size: 1.8rem;
+  font-size: 2rem;
   background-color: #c6a9a3;
   color: white; }
 
@@ -95,7 +89,7 @@
   .ppage--item {
     padding: 0px; }
     .ppage--item h2 {
-      font-size: 2.2rem;
+      font-size: 2.5rem;
       color: #99bbad;
       margin-bottom: 20px; }
     .ppage--item p {
@@ -114,12 +108,12 @@
   margin-bottom: 5px;
   background: linear-gradient(90deg, white 0%, rgba(235, 216, 183, 0.179709) 27%); }
   .mainCentro h4 {
-    font-size: 1rem;
+    font-size: 1.5rem;
     margin-top: 10px;
     margin-bottom: 10px;
-    padding: 15px;
+    padding: 10px;
     font-weight: lighter;
-    text-align: center; }
+    text-align: left; }
 
 .mainEspecialidad {
   flex-direction: row;
@@ -177,7 +171,7 @@
 
 .bannerEstudio {
   height: 50vh;
-  background-image: url("/img/slide1.jpg");
+  background-image: url("../../img/slide1.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -201,7 +195,7 @@
 
 .bannerCirugia {
   height: 60vh;
-  background-image: url("/img/quirofano.jpg");
+  background-image: url("../../img/quirofano.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
