--- a/styles/pages/main.scss
+++ b/styles/pages/main.scss
@@ -1,5 +1,6 @@
 @import "styles/abstracts/resets";
 @import "styles/abstracts/variables";
+@import "styles/abstracts/logics";
 @import "styles/pages/header";
 @import "styles/pages/footer";
 @import "styles/pages/index";
