--- a/styles/pages/_nuestrocentro.scss
+++ b/styles/pages/_nuestrocentro.scss
@@ -1,7 +1,7 @@
 .mainCentro {
   margin-top: $margin-size-small;
   margin-bottom: $margin-size-small;
-  background: $bc-cream;
+  background: $bc-pink--light;
 
   h4 {
     font-size: $txt-size-m;
