--- a/styles/pages/_especialidades.scss
+++ b/styles/pages/_especialidades.scss
@@ -1,15 +1,15 @@
 .mainEspecialidad {
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
   margin-top: $margin-size-small;
   margin-bottom: $margin-size-small;
-  background: $bc-cream;
 
-  .section1 {
+  .especialidad {
+    margin-bottom: $margin-size-big;
+
+    &--color {
+      background: $bc-cream;
+    }
+
     h2 {
-      background: $bc-green;
       color: $color-boldgreen;
       font-size: $subtitle-size;
       text-align: center;
